--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,8 +9,8 @@ on:
       - master
 
 permissions:
-  id-token: write     # Required for OIDC
-  contents: write     # Required for actions/checkout
+  id-token: write
+  contents: write
   pull-requests: write
   security-events: write
 
@@ -19,17 +19,14 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # Checkout code
       - name: Checkout code
         uses: actions/checkout@v4
 
-      # Set up Node.js 22 (required by juice-shop dependencies)
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '22'
 
-      # Set up JFrog CLI with OIDC
       - uses: jfrog/setup-jfrog-cli@v4
         id: setup-cli
         name: Setup JFrog CLI
@@ -38,48 +35,27 @@ jobs:
         with:
           oidc-provider-name: frogbot
 
-      # Ping JFrog Platform to confirm connectivity
       - name: Ping JFrog Platform
         run: jf rt ping
 
-      # Configure npm to use Artifactory for dependency resolution
+      # Configure npm for Artifactory
       - name: Configure npm for Artifactory
         run: jf npmc --repo-resolve steffes-gh-npm
 
-      # Install root npm dependencies (resolved through Artifactory)
+      # Patch postinstall script to use jf npm install
+      - name: Patch postinstall script
+        run: |
+          sed -i 's/npm install/jf npm install/g' package.json
+
+      # Install root npm dependencies
       - name: Install root npm dependencies
         run: jf npm install
 
-      # Install frontend npm dependencies (resolved through Artifactory)
-      - name: Install frontend npm dependencies
-        run: |
-          cd frontend
-          jf npm install --legacy-peer-deps
-          cd ..
-
-      # Build frontend (if required)
-      - name: Build frontend
-        run: npm run build:frontend
-
-      # Run Xray Advanced Security scan (SCA, SAST, License, Secrets)
+      # Run Xray Advanced Security Scan
       - name: Xray Advanced Security Scan
         run: jf audit --watches="AnyBuildWatch"
 
-      # Frogbot - SAST PR Comments
-      - name: Frogbot - SAST PR Comments
-        uses: jfrog/frogbot@v2
-        env:
-          JF_URL: https://${{ vars.JF_URL }}/
-          JF_GIT_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          JF_GIT_BASE_BRANCH: ${{ github.event.pull_request.base.ref || 'master' }}
-          JF_INSTALL_DEPS_CMD: "jf npm install"
-          JF_SCAN: "sast"
-          JF_FAIL: "TRUE"
-          JF_INCLUDE_ALL_VULNERABILITIES: "TRUE"
-        with:
-          oidc-provider-name: frogbot
-
-      # Frogbot - SCA Fix PRs (Separate)
+      # Frogbot - SCA Fix PRs
       - name: Frogbot - SCA Fix PRs (Separate)
         uses: jfrog/frogbot@v2
         env:
@@ -94,15 +70,4 @@ jobs:
           oidc-provider-name: frogbot
 
       # Frogbot - SCA Fix PR (Aggregated)
-      - name: Frogbot - SCA Fix PR (Aggregated)
-        uses: jfrog/frogbot@v2
-        env:
-          JF_URL: https://${{ vars.JF_URL }}/
-          JF_GIT_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          JF_GIT_BASE_BRANCH: ${{ github.event.pull_request.base.ref || 'master' }}
-          JF_INSTALL_DEPS_CMD: "jf npm install"
-          JF_SCAN: "sca"
-          JF_GIT_AGGREGATE_FIXES: "TRUE"
-          JF_FIXABLE_ONLY: "TRUE"
-        with:
-          oidc-provider-name: frogbot
+      - name: Frogbot - SCA Fix
